--- a/MainCode.ipynb
+++ b/MainCode.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "# DataSource - https://www.kaggle.com/datasets/pradip11/amexpert-codelab-2021\n",
-    "df = pd.read_csv(r\"DataSet\\train.csv\")"
+    "df = pd.read_csv(r\"Dataset")"
    ]
   },
   {
